--- a/dashboard/searching_dash.html
+++ b/dashboard/searching_dash.html
@@ -621,13 +621,16 @@ window.makeComments = async function(character, key, distance) {
         // Calculate the total number of segments based on the initial checkpoint distance
         characterData[character].totalSegments = Math.ceil(characterData[character].initialCheckpoint / distance);
         console.log(`Total segments for ${character}:`, characterData[character].totalSegments);
+    } else {
+        // Clear any existing interval timer for the character
+        clearInterval(characterData[character].intervalId);
     }
 
     const approachingSentences = Object.values(approaching);
     const approachingFinal = approachingSentences[Math.floor(Math.random() * approachingSentences.length)];
 
     // Set up a timer to periodically check for updates in checkpoint distances
-    setInterval(() => {
+    characterData[character].intervalId = setInterval(() => {
         // Determine the current distance and progress made
         let currentDistance = window[`${character}_checkpoint_dist`]; // Assuming checkpoint_dist is updated elsewhere
         let progress = characterData[character].initialCheckpoint - currentDistance;
@@ -640,14 +643,13 @@ window.makeComments = async function(character, key, distance) {
             characterData[character].totalSegments = Math.ceil(currentDistance / distance);
             console.log(`Total segments for ${character} updated to:`, characterData[character].totalSegments);
         }
-        /// Display the text for the current segment only
+        // Display the text for the current segment only
         if (currentSegment === 0 || currentSegment === 1) {
             variables()[`${character}_comment`] = ""; // Set to empty string
-        } else if (currentSegment >= characterData[character].totalSegments) {
-            // Reset the initial checkpoint for the next segment
-            characterData[character].initialCheckpoint = currentDistance;
         } else if (currentSegment === characterData[character].totalSegments - 1) {
             variables()[`${character}_comment`] = approachingFinal;
+        } else if (currentSegment === characterData[character].totalSegments) {
+            clearInterval(characterData[character].intervalId); // Stop the interval timer
         } else if (currentSegment < 0) {
             // Character is distancing away from the next checkpoint
             variables()[`${character}_comment`] = "It seems you are distancing away from the next checkpoint";
@@ -857,7 +859,7 @@ Loading variables...
           &lt;&lt;include &quot;both_preamble&quot;&gt;&gt;
 	&lt;/div&gt;
 	&lt;div id=&quot;hachi_story&quot;&gt;
-           &lt;&lt;include &quot;hachi_act2&quot;&gt;&gt;	
+           &lt;&lt;include &quot;hachi_act2_transition&quot;&gt;&gt;	
 	&lt;/div&gt;
 &lt;/div&gt;
 &lt;&lt;/if&gt;&gt;
@@ -1233,20 +1235,20 @@ $avatar_passage
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_tram2_00false&quot; and $hachi_movement == &quot;Wiggling the tail&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_tram2_01false/Hachi greets Leo wagging his tail and eager barks, happy to see a familiar face. Somehow it was like Hachi was trying to say: &#39;Hi, Leo! I&#39;m looking for Buro. Have you seen him today?&#39;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_tram2_01false/Hachi greets Leo wagging his tail and eager barks, happy to see a familiar face. Somehow it was like Hachi was trying to say: &#39;Hi, Leo! I&#39;m looking for Buro. Have you seen him today?&#39;&quot;&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if ($hachi_narrating == &quot;hachi_tram2_00false&quot;&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_tram2_00false&quot;&gt;&gt;
   &lt;&lt;if $hachi_movement !== &quot;Wiggling the tail&quot;&gt;&gt;
   &lt;&lt;if typeof _prevhachiMovement === &#39;undefined&#39;&gt;&gt;&lt;&lt;set _prevhachiMovement to $hachi_movement&gt;&gt;&lt;&lt;elseif _prevhachiMovement !== $hachi_movement&gt;&gt;&lt;&lt;script&gt;&gt;makeShortComments(&#39;hachi&#39;, &#39;notmoving&#39;); console.log(variables().hachi_comment); &lt;&lt;/script&gt;&gt;&lt;&lt;set _prevhachiMovement to variables().hachi_movement&gt;&gt;&lt;&lt;if $hachi_comment !== _prevhachiComment&gt;&gt;&lt;&lt;set _prevhachiComment to $hachi_comment&gt;&gt;&lt;&lt;script&gt;&gt;var passage_temp = variables().hachi_comment;const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();console.log(renderedText);variables().hachi_passage = renderedText;&lt;&lt;/script&gt;&gt;&lt;&lt;set $hachi_passage to variables().hachi_passage&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;/if&gt;&gt;
   &lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_tram2_01false&quot; &gt;&gt;
+    &lt;&lt;set $hachi_nextAct to false&gt;&gt;
     &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;hachi_tram_3&quot;&gt;&gt;
-        &lt;&lt;set $hachi_nextAct to false&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1258,21 +1260,22 @@ $hachi_passage
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_tram1_00false&quot; and $hachi_movement == &quot;Sniffing&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_tram1_01false/Hachi sniffs the air, detecting the approach of Leo, the friendly tram conductor whose shift was ending.&quot;
-After getting of the tram, Leo said to Hachi, &#39;Well, well, if it isn&#39;t Hachi! What&#39;s got your nose twitching today, buddy?&#39;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_tram1_01false/Hachi sniffs the air, detecting the approach of Leo, the friendly tram conductor whose shift was ending.
+After getting of the tram, Leo said to Hachi, &#39;Well, well, if it isn&#39;t Hachi! What&#39;s got your nose twitching today, buddy?&#39;&quot;&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if ($hachi_narrating == &quot;hachi_tram1_00false&quot;&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_tram1_00false&quot;&gt;&gt;
   &lt;&lt;if $hachi_movement !== &quot;Sniffing&quot;&gt;&gt;
+  Here
   &lt;&lt;if typeof _prevhachiMovement === &#39;undefined&#39;&gt;&gt;&lt;&lt;set _prevhachiMovement to $hachi_movement&gt;&gt;&lt;&lt;elseif _prevhachiMovement !== $hachi_movement&gt;&gt;&lt;&lt;script&gt;&gt;makeShortComments(&#39;hachi&#39;, &#39;notmoving&#39;); console.log(variables().hachi_comment); &lt;&lt;/script&gt;&gt;&lt;&lt;set _prevhachiMovement to variables().hachi_movement&gt;&gt;&lt;&lt;if $hachi_comment !== _prevhachiComment&gt;&gt;&lt;&lt;set _prevhachiComment to $hachi_comment&gt;&gt;&lt;&lt;script&gt;&gt;var passage_temp = variables().hachi_comment;const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();console.log(renderedText);variables().hachi_passage = renderedText;&lt;&lt;/script&gt;&gt;&lt;&lt;set $hachi_passage to variables().hachi_passage&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;/if&gt;&gt;
   &lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_tram1_01false&quot; &gt;&gt;
+  &lt;&lt;set $hachi_nextAct to false&gt;&gt;
     &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;hachi_tram_2&quot;&gt;&gt;
-        &lt;&lt;set $hachi_nextAct to false&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1283,13 +1286,13 @@ After getting of the tram, Leo said to Hachi, &#39;Well, well, if it isn&#39;t H
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
-&lt;&lt;if $hachi_narrating == &quot;hachi_tram4_00false&quot; and ($hachi_movement == &quot;Barking&quot; || $hachi_movement == &quot;Sniffing&quot; || $hachi_movement == &quot;Wiggling tail&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_tram4_01false/You and Buro make quite the pair, Hachi. You know, I&#39;ve seen him chatting with Lina over at the bank. Maybe you should go check there! Or maybe you can visit Mrs. Novakova near the fountain, I am sure she might have seen him too.&#39;&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_tram4_00false&quot; and ($hachi_movement == &quot;Barking&quot; || $hachi_movement == &quot;Sniffing&quot; || $hachi_movement == &quot;Wiggling tail&quot;)&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_tram4_01false/You and Buro make quite the pair, Hachi. You know, I&#39;ve seen him chatting with Lina over at the bank. Maybe you should go check there! Or maybe you can visit Mrs. Novakova near the fountain, I am sure she might have seen him too.&#39;&quot;&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if ($hachi_narrating == &quot;hachi_tram4_00false&quot;&gt;&gt;
-  &lt;&lt;if ($hachi_movement !== &quot;Barking&quot; || $hachi_movement !== &quot;Sniffing&quot; || $hachi_movement !== &quot;Wiggling tail&quot;&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_tram4_00false&quot;&gt;&gt;
+  &lt;&lt;if $hachi_movement !== &quot;Barking&quot; and $hachi_movement !== &quot;Sniffing&quot; and $hachi_movement !== &quot;Wiggling tail&quot;&gt;&gt;
   &lt;&lt;if typeof _prevhachiMovement === &#39;undefined&#39;&gt;&gt;&lt;&lt;set _prevhachiMovement to $hachi_movement&gt;&gt;&lt;&lt;elseif _prevhachiMovement !== $hachi_movement&gt;&gt;&lt;&lt;script&gt;&gt;makeShortComments(&#39;hachi&#39;, &#39;notmoving&#39;); console.log(variables().hachi_comment); &lt;&lt;/script&gt;&gt;&lt;&lt;set _prevhachiMovement to variables().hachi_movement&gt;&gt;&lt;&lt;if $hachi_comment !== _prevhachiComment&gt;&gt;&lt;&lt;set _prevhachiComment to $hachi_comment&gt;&gt;&lt;&lt;script&gt;&gt;var passage_temp = variables().hachi_comment;const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();console.log(renderedText);variables().hachi_passage = renderedText;&lt;&lt;/script&gt;&gt;&lt;&lt;set $hachi_passage to variables().hachi_passage&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;/if&gt;&gt;
   &lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
@@ -1297,8 +1300,8 @@ $hachi_passage
 &lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_tram4_01false&quot; &gt;&gt;
     &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;hachi_act2&quot;&gt;&gt;
-        &lt;&lt;set $hachi_nextAct to false&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
+  &lt;&lt;set $hachi_nextAct to false&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;/liveblock&gt;&gt;
@@ -1309,11 +1312,11 @@ $hachi_passage
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_tram3_00false&quot; and $hachi_movement == &quot;Barking&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_tram3_01false/Leo notices Hachi&#39;s responsiveness and rewards him with a tasty treat from his pocket. &#39;Here you go, Hachi! A little snack for being such a good boy. Now, where&#39;s your buddy?&#39;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_tram3_01false/Leo notices Hachi&#39;s responsiveness and rewards him with a tasty treat from his pocket. &#39;Here you go, Hachi! A little snack for being such a good boy. Now, where&#39;s your buddy?&#39;&quot;&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if ($hachi_narrating == &quot;hachi_tram3_00false&quot;&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_tram3_00false&quot;&gt;&gt;
   &lt;&lt;if $hachi_movement !== &quot;Barking&quot;&gt;&gt;
   &lt;&lt;if typeof _prevhachiMovement === &#39;undefined&#39;&gt;&gt;&lt;&lt;set _prevhachiMovement to $hachi_movement&gt;&gt;&lt;&lt;elseif _prevhachiMovement !== $hachi_movement&gt;&gt;&lt;&lt;script&gt;&gt;makeShortComments(&#39;hachi&#39;, &#39;notmoving&#39;); console.log(variables().hachi_comment); &lt;&lt;/script&gt;&gt;&lt;&lt;set _prevhachiMovement to variables().hachi_movement&gt;&gt;&lt;&lt;if $hachi_comment !== _prevhachiComment&gt;&gt;&lt;&lt;set _prevhachiComment to $hachi_comment&gt;&gt;&lt;&lt;script&gt;&gt;var passage_temp = variables().hachi_comment;const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();console.log(renderedText);variables().hachi_passage = renderedText;&lt;&lt;/script&gt;&gt;&lt;&lt;set $hachi_passage to variables().hachi_passage&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;/if&gt;&gt;
   &lt;&lt;/if&gt;&gt;
@@ -1322,8 +1325,8 @@ $hachi_passage
 &lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_tram3_01false&quot; &gt;&gt;
     &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;hachi_tram_4&quot;&gt;&gt;
-        &lt;&lt;set $hachi_nextAct to false&gt;&gt;
   &lt;&lt;/replace&gt;&gt;
+   &lt;&lt;set $hachi_nextAct to false&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;/liveblock&gt;&gt;
