--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
 					// Create a new instance of SpeechSynthesisUtterance.
 					const utterance = new SpeechSynthesisUtterance(fullMessage);
 					// Filter available voices to find Karen's voice in Australian English
-					const karenVoice = speechSynthesis.getVoices().find(voice => voice.name === 'Karen' && voice.lang === 'en-AU');
+					const karenVoice = speechSynthesis.getVoices().find(voice => voice.name === 'Samantha' && voice.lang === 'en-US');
 					// Set the voice to Karen's voice if found, otherwise use the default voice
 					utterance.voice = karenVoice || speechSynthesis.getVoices()[0];
 					// Speak the message
