--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 						speakMessage(fullMessage);
 						updateDisplay(fullMessage);
 					} else { // If the delimiter does not exist
-						messageID = ""; // Set message ID to an empty string globally
+						//messageID = ""; // Set message ID to an empty string globally
 						var fullMessage = message.trim(); // The full message is the entire input
 						clearTimeout(timeoutID);
 						speakMessage(fullMessage);
