--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1344,7 +1344,7 @@ $hachi_passage
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_stairs1_01false&quot; and $hachi_movement == &quot;Grabbing something&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_stairs1_02/Hachi thought for himself: &#39;Let&#39;s check around here. Maybe I can follow this trail of gum wrappers trail!&#39;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_stairs1_02/Hachi thought for himself: &#39;Let&#39;s check around here. Maybe I can follow this trail of gum wrappers trail!&#39;&quot;&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
