--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1333,7 +1333,7 @@ $hachi_passage
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
-&lt;&lt;if $hachi_narrating == &quot;hachi_stairs1_00false&quot; and ($hachi_movement == &quot;Sniffing&quot; || $hachi_movement == &quot;Standing back legs&quot;)&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_stairs1_00false&quot; and ($hachi_movement == &quot;Sniffing&quot; || $hachi_movement == &quot;Standing back leg&quot;)&gt;&gt;
   &lt;&lt;set $hachi_passage to &quot;hachi_stairs1_01/Hachi explores the area around the old building, sniffing for any familiar scents or signs of Buro&#39;s presence. He sees a wrapper and grabs it with his mouth.&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1363,13 +1363,13 @@ $hachi_passage
 
 &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="29" name="hachi_stairs_3" tags="" position="1025,1325" size="100,100">&lt;&lt;nobr&gt;&gt;
-&lt;&lt;set $hachi_passage to &quot;hachi_stairs3_00/As Mr. Al Mansouri continues his story, he notices Hachi&#39;s anxious behavior and realizes that Buro is not with him.&quot;&gt;&gt;
+&lt;&lt;set $hachi_passage to &quot;hachi_stairs3_00/Hachi attempts to mimic Blue&#39;s squawks, adding to the lively conversation and earning a laugh from Mr. Al Mansouri.&quot;&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
-&lt;&lt;if $hachi_narrating == &quot;hachi_stairs3_00false&quot; and ($hachi_movement == &quot;Barking&quot; || $hachi_movement == &quot;Sniffing&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_stairs3_01/Mr. Al Mansouri: &#39;Welcome, little friend! Sit with us and hear tales of adventure on the high seas. Once upon a time, in the heart of the Gulf Sea...&#39;&quot;&gt;&gt;
+&lt;&lt;if $hachi_narrating == &quot;hachi_stairs3_00false&quot; and ($hachi_movement == &quot;Barking&quot; || $hachi_movement == &quot;Sniffing&quot;)&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_stairs3_01/Hachi barking: &#39;Squawk! Squawk! Like this, Blue? Hehe!, Hachi thought to himself&#39;&quot;&gt;&gt;
   &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1393,7 +1393,7 @@ $hachi_passage
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_stairs2_00false&quot; and $hachi_movement == &quot;Barking&quot;&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_fountain4_01/Mr. Al Mansouri: &#39;Welcome, little friend! Sit with us and hear tales of adventure on the high seas. Once upon a time, in the heart of the Gulf Sea...&#39;&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_stairs2_01/Mr. Al Mansouri: &#39;Welcome, little friend! Sit with us and hear tales of adventure on the high seas. Once upon a time, in the heart of the Gulf Sea...&#39;&quot;&gt;&gt;
   &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1403,7 +1403,7 @@ $hachi_passage
   &lt;&lt;/if&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_fountain2_01false&quot; &gt;&gt;
+&lt;&lt;if $hachi_nextAct is true and hachi_narrating == &quot;hachi_stairs2_01false&quot; &gt;&gt;
   &lt;&lt;set $hachi_nextAct to false&gt;&gt;
     &lt;&lt;replace &quot;#hachi_story&quot;&gt;&gt;
   		&lt;&lt;include&quot;hachi_stairs_3&quot;&gt;&gt;
