--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1280,7 +1280,6 @@ After getting of the tram, Leo said to Hachi, &#39;Well, well, if it isn&#39;t H
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="26" name="hachi_tram_4" tags="" position="1150,1000" size="100,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $hachi_passage to &quot;hachi_tram4_00/Leo recognizes Hachi and Buro’s friendship and tells Hachi about Lina, the bank teller and Ms. Novakova at the fountain.&quot;&gt;&gt;
 
-
 &lt;&lt;if $hachi_turn == 3&gt;&gt;
 &lt;&lt;set $hachi_bank to &quot;Or you can visit the bank. It recently opened&quot;&gt;&gt;
 &lt;&lt;else&gt;&gt;
@@ -1886,7 +1885,7 @@ if (window.$avatar_comment !== window._prevAvatarComment) {
 &lt;&lt;/script&gt;&gt;</tw-passagedata><tw-passagedata pid="70" name="hachi_act2_transition" tags="" position="1400,1175" size="100,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set variables().hachi_checkpoint_dist to $hachi_checkpoint_dist&gt;&gt;
 &lt;&lt;set $hachi_comment to &quot;&quot;&gt;&gt;
-&lt;&lt;set $hachi_bank to 3&gt;&gt;
+&lt;&lt;set $hachi_turn to 3&gt;&gt;
 
 &lt;&lt;script&gt;&gt;
 makeComments(&#39;hachi&#39;,&#39;observes&#39;,40);
