--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1254,12 +1254,18 @@ $hachi_passage
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="25" name="hachi_tram_1" tags="" position="1025,875" size="100,100">&lt;&lt;nobr&gt;&gt;
 &lt;&lt;set $hachi_passage to &quot;hachi_tram1_00/Hachi arrives at the tram stop, where he encounters a friendly tram conductor named Leo. Leo shares stories about Buro&#39;s daily commute and how he always boards the tram at the same time each morning.&quot;&gt;&gt;
 
+&lt;&lt;if $hachi_turn == 3&gt;&gt;
+&lt;&lt;set $hachi_bank to &quot;Or you can also visit the bank. It recently opened&quot;&gt;&gt;
+&lt;&lt;else&gt;&gt;
+&lt;&lt;set $hachi_bank to&quot;&quot;&gt;&gt;
+&lt;&lt;/if&gt;&gt;
+
 &lt;&lt;liveblock&gt;&gt;
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_tram1_00false&quot; and $hachi_movement == &quot;Sniffing&quot;&gt;&gt;
   &lt;&lt;set $hachi_passage to &quot;hachi_tram1_01/Hachi sniffs the air, detecting the approach of Leo, the friendly tram conductor whose shift was ending.
-After getting of the tram, Leo said to Hachi, &#39;Well, well, if it isn&#39;t Hachi! What&#39;s got your nose twitching today, buddy?&#39;&quot;&gt;&gt;
+After getting of the tram, Leo said to Hachi, &#39;Well, well, if it isn&#39;t Hachi! What&#39;s got your nose twitching today, buddy?&#39; &#39;$hachi_bank&#39;&quot;&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
@@ -1281,7 +1287,7 @@ After getting of the tram, Leo said to Hachi, &#39;Well, well, if it isn&#39;t H
 &lt;&lt;set $hachi_passage to &quot;hachi_tram4_00/Leo recognizes Hachi and Buro’s friendship and tells Hachi about Lina, the bank teller and Ms. Novakova at the fountain.&quot;&gt;&gt;
 
 &lt;&lt;if $hachi_turn == 3&gt;&gt;
-&lt;&lt;set $hachi_bank to &quot;Or you can visit the bank. It recently opened&quot;&gt;&gt;
+&lt;&lt;set $hachi_bank to &quot;Or you can also visit the bank. It recently opened&quot;&gt;&gt;
 &lt;&lt;else&gt;&gt;
 &lt;&lt;set $hachi_bank to&quot;&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
@@ -1290,7 +1296,7 @@ After getting of the tram, Leo said to Hachi, &#39;Well, well, if it isn&#39;t H
 $hachi_passage
 
 &lt;&lt;if $hachi_narrating == &quot;hachi_tram4_00false&quot; and ($hachi_movement == &quot;Barking&quot; || $hachi_movement == &quot;Sniffing&quot; || $hachi_movement == &quot;Wiggling tail&quot;)&gt;&gt;
-  &lt;&lt;set $hachi_passage to &quot;hachi_tram4_01/You and Buro make quite the pair, Hachi. You know, I&#39;ve seen him chatting with Mr. Al Mansouri. Maybe you should go check there! Or maybe you can visit Mrs. Novakova near the fountain, I am sure she might have seen him too.&#39; $hachi_bank&quot;&gt;&gt;
+  &lt;&lt;set $hachi_passage to &quot;hachi_tram4_01/You and Buro make quite the pair, Hachi. You know, I&#39;ve seen him chatting with Mr. Al Mansouri. Maybe you should go check there! Or maybe you can visit Mrs. Novakova near the fountain, I am sure she might have seen him too.&#39; &#39;$hachi_bank&#39; &quot;&gt;&gt;
 &lt;&lt;set $hachi_nextAct to true&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
