--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1257,7 +1257,7 @@ $hachi_passage
 &lt;&lt;if $hachi_turn == 3&gt;&gt;
 &lt;&lt;set $hachi_bank to &quot;Or you can also visit the bank. It recently opened&quot;&gt;&gt;
 &lt;&lt;else&gt;&gt;
-&lt;&lt;set $hachi_bank to&quot;&quot;&gt;&gt;
+&lt;&lt;set $hachi_bank to&quot;Empty&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
