--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1892,6 +1892,7 @@ if (window.$avatar_comment !== window._prevAvatarComment) {
 &lt;&lt;set variables().hachi_checkpoint_dist to $hachi_checkpoint_dist&gt;&gt;
 &lt;&lt;set $hachi_comment to &quot;&quot;&gt;&gt;
 &lt;&lt;set $hachi_turn to 2&gt;&gt;
+&lt;&lt;set $hachi_bank to &quot;&quot;&gt;&gt;
 
 &lt;&lt;script&gt;&gt;
 makeComments(&#39;hachi&#39;,&#39;observes&#39;,40);
