--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1257,7 +1257,7 @@ $hachi_passage
 &lt;&lt;if $hachi_turn == 3&gt;&gt;
 &lt;&lt;set $hachi_bank to &quot;Or you can also visit the bank. It recently opened&quot;&gt;&gt;
 &lt;&lt;else&gt;&gt;
-&lt;&lt;set $hachi_bank to&quot;Empty&quot;&gt;&gt;
+&lt;&lt;set $hachi_bank to &quot;&quot;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt;
@@ -1892,7 +1892,6 @@ if (window.$avatar_comment !== window._prevAvatarComment) {
 &lt;&lt;set variables().hachi_checkpoint_dist to $hachi_checkpoint_dist&gt;&gt;
 &lt;&lt;set $hachi_comment to &quot;&quot;&gt;&gt;
 &lt;&lt;set $hachi_turn to 2&gt;&gt;
-&lt;&lt;set $hachi_bank to &quot;.&quot;&gt;&gt;
 
 &lt;&lt;script&gt;&gt;
 makeComments(&#39;hachi&#39;,&#39;observes&#39;,40);
